@@ -154,7 +154,32 @@ class TestGemInstaller < RubyGemTestCase
     assert_equal(0100755, File.stat(installed_exec).mode) unless win_platform?
 
     wrapper = File.read installed_exec
-    assert_match(/generated by RubyGems/, wrapper)
+    assert_match %r|generated by RubyGems|, wrapper
+    assert_match %r|ENV\['GEM_HOME'\] \|\|= '#{@gemhome}'|, wrapper
+  end
+
+  def test_generate_bin_scripts_install_dir
+    @installer.options[:wrappers] = true
+    @spec.executables = ["my_exec"]
+
+    gem_dir = File.join "#{@gemhome}2", 'gems', @spec.full_name
+    gem_bindir = File.join gem_dir, 'bin'
+    FileUtils.mkdir_p gem_bindir
+    File.open File.join(gem_bindir, "my_exec"), 'w' do |f|
+      f.puts "#!/bin/ruby"
+    end
+
+    @installer.directory = gem_dir
+
+    @installer.generate_bin @spec, "#{@gemhome}2"
+
+    installed_exec = File.join("#{@gemhome}2", 'bin', 'my_exec')
+    assert_equal true, File.exist?(installed_exec)
+    assert_equal(0100755, File.stat(installed_exec).mode) unless win_platform?
+
+    wrapper = File.read installed_exec
+    assert_match %r|generated by RubyGems|, wrapper
+    assert_match %r|ENV\['GEM_HOME'\] \|\|= '#{@gemhome}2'|, wrapper
   end
 
   def test_generate_bin_scripts_no_execs
